native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_update_copied_metadata_safe(JYPPX_CudaGraphExec* graph_exec, JYPPX_CudaGraph* graph, int32_t* out_result, JYPPX_Boolean* out_has_error_node, int32_t* out_error_node_type, JYPPX_Boolean* out_has_error_from_node, int32_t* out_error_from_node_type);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_instantiate_with_params_safe(JYPPX_CudaGraph* graph, uint64_t flags, JYPPX_CudaGraphExec** out_graph_exec, int32_t* out_result, JYPPX_Boolean* out_has_error_node, int32_t* out_error_node_type);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_instantiate_with_params_on_stream_safe(JYPPX_CudaGraph* graph, uint64_t flags, JYPPX_CudaStream* upload_stream, JYPPX_CudaGraphExec** out_graph_exec, int32_t* out_result, JYPPX_Boolean* out_has_error_node, int32_t* out_error_node_type);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_copy_attributes_safe(uintptr_t destination_node, uintptr_t source_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_memset_node_set_params_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_CudaMemory* destination, uint32_t value, size_t count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_get_params_snapshot_safe(uintptr_t node, JYPPX_CudaGraphKernelNodeParamsSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_host_node_get_params_snapshot_safe(uintptr_t node, JYPPX_CudaGraphHostNodeParamsSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_mem_alloc_node_get_params_snapshot_safe(uintptr_t node, JYPPX_CudaGraphMemAllocNodeParamsSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_mem_free_node_get_params_snapshot_safe(uintptr_t node, JYPPX_CudaGraphMemFreeNodeParamsSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_external_semaphore_signal_node_get_params_snapshot_safe(uintptr_t node, JYPPX_CudaGraphExternalSemaphoreNodeParamsSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_external_semaphore_wait_node_get_params_snapshot_safe(uintptr_t node, JYPPX_CudaGraphExternalSemaphoreNodeParamsSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_node_count(JYPPX_CudaGraph* graph, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_root_node_count(JYPPX_CudaGraph* graph, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_edge_count(JYPPX_CudaGraph* graph, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_instantiate(JYPPX_CudaGraph* graph, uint64_t flags, JYPPX_CudaGraphExec** out_graph_exec);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_upload(JYPPX_CudaGraphExec* graph_exec, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_nodes(JYPPX_CudaGraph* graph, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_root_nodes(JYPPX_CudaGraph* graph, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_edges(JYPPX_CudaGraph* graph, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_instantiate_with_flags(JYPPX_CudaGraph* graph, uint64_t flags, JYPPX_CudaGraphExec** out_graph_exec);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_launch(JYPPX_CudaGraphExec* graph_exec, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_node_handle(JYPPX_CudaGraph* graph, size_t index, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_root_node_handle(JYPPX_CudaGraph* graph, size_t index, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_edge_handle_pair(JYPPX_CudaGraph* graph, size_t index, uintptr_t* out_from_node, uintptr_t* out_to_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_edges_v2_count_safe(JYPPX_CudaGraph* graph, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_edge_v2_safe(JYPPX_CudaGraph* graph, size_t index, uintptr_t* out_from_node, uintptr_t* out_to_node, JYPPX_CudaGraphEdgeData* out_edge_data);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_node_set_enabled_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_Boolean enabled);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_node_get_enabled_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_Boolean* out_enabled);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_get_id_safe(JYPPX_CudaGraph* graph, uint32_t* out_id);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_get_params_safe(uintptr_t node, JYPPX_CudaGraphMemcpyNodeParams* out_params);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_set_params_1d_device_to_device_safe(uintptr_t node, JYPPX_CudaMemory* destination, JYPPX_CudaMemory* source, size_t count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_set_params_1d_device_to_host_safe(uintptr_t node, JYPPX_CudaPinnedMemory* destination, JYPPX_CudaMemory* source, size_t count);
/* END CUDA FORTY-SEVENTH BATCH GRAPH MEMCPY 1D NODES */

/* BEGIN CUDA FORTY-EIGHTH BATCH GRAPH KERNEL NODE ATTRIBUTES */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_get_attribute_scalar_safe(uintptr_t node, int32_t attribute, JYPPX_CudaGraphKernelNodeAttributeValue* out_value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_set_attribute_scalar_safe(uintptr_t node, const JYPPX_CudaGraphKernelNodeAttributeValue* value);
/* END CUDA TWENTY-NINTH BATCH GRAPH MEMORY AND NODE IDENTITY DECLARATIONS */

/* BEGIN CUDA THIRTY-SEVENTH BATCH GRAPH BOUNDARY DECLARATIONS */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_get_attribute_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_set_attribute_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_kernel_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_mem_alloc_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_set_params_1d_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_mem_free_node_get_params_deferred(void);