src/JYPPX.CudaSharp/Internal/Interop/Generated/GeneratedCudaManifestNativeMethods.g.cs


    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_memset_node_set_params_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, SafeCudaMemoryHandle destination, uint value, UIntPtr count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_node_get_enabled_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, out int out_enabled);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_node_set_enabled_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, int enabled);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_update_copied_metadata_safe(SafeCudaGraphExecHandle graph_exec, SafeCudaGraphHandle graph, out int out_result, out int out_has_error_node, out int out_error_node_type, out int out_has_error_from_node, out int out_error_from_node_type);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_upload(SafeCudaGraphExecHandle graph_exec, SafeCudaStreamHandle stream);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_external_semaphore_signal_node_get_params_snapshot_safe(UIntPtr node, out NativeCudaGraphExternalSemaphoreNodeParamsSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_external_semaphore_wait_node_get_params_snapshot_safe(UIntPtr node, out NativeCudaGraphExternalSemaphoreNodeParamsSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_edge_count(SafeCudaGraphHandle graph, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_edge_handle_pair(SafeCudaGraphHandle graph, UIntPtr index, out UIntPtr out_from_node, out UIntPtr out_to_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_edge_v2_safe(SafeCudaGraphHandle graph, UIntPtr index, out UIntPtr out_from_node, out UIntPtr out_to_node, out NativeCudaGraphEdgeData out_edge_data);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_edges(SafeCudaGraphHandle graph, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_edges_v2_count_safe(SafeCudaGraphHandle graph, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_id_safe(SafeCudaGraphHandle graph, out uint out_id);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_node_count(SafeCudaGraphHandle graph, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_node_handle(SafeCudaGraphHandle graph, UIntPtr index, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_nodes(SafeCudaGraphHandle graph, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_root_node_count(SafeCudaGraphHandle graph, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_root_node_handle(SafeCudaGraphHandle graph, UIntPtr index, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_get_root_nodes(SafeCudaGraphHandle graph, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_host_node_get_params_snapshot_safe(UIntPtr node, out NativeCudaGraphHostNodeParamsSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_instantiate(SafeCudaGraphHandle graph, ulong flags, out SafeCudaGraphExecHandle out_graph_exec);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_instantiate_with_flags(SafeCudaGraphHandle graph, ulong flags, out SafeCudaGraphExecHandle out_graph_exec);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_instantiate_with_params_on_stream_safe(SafeCudaGraphHandle graph, ulong flags, SafeCudaStreamHandle upload_stream, out SafeCudaGraphExecHandle out_graph_exec, out int out_result, out int out_has_error_node, out int out_error_node_type);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_instantiate_with_params_safe(SafeCudaGraphHandle graph, ulong flags, out SafeCudaGraphExecHandle out_graph_exec, out int out_result, out int out_has_error_node, out int out_error_node_type);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_copy_attributes_safe(UIntPtr destination_node, UIntPtr source_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_get_attribute_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_get_attribute_scalar_safe(UIntPtr node, int attribute, out NativeCudaGraphKernelNodeAttributeValue out_value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_get_params_snapshot_safe(UIntPtr node, out NativeCudaGraphKernelNodeParamsSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_set_attribute_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_set_attribute_scalar_safe(UIntPtr node, in NativeCudaGraphKernelNodeAttributeValue value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_kernel_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_launch(SafeCudaGraphExecHandle graph_exec, SafeCudaStreamHandle stream);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_mem_alloc_node_get_params_snapshot_safe(UIntPtr node, out NativeCudaGraphMemAllocNodeParamsSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_mem_alloc_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_mem_free_node_get_params_snapshot_safe(UIntPtr node, out NativeCudaGraphMemFreeNodeParamsSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_mem_free_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_get_params_safe(UIntPtr node, out NativeCudaGraphMemcpyNodeParams out_params);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_set_params_1d_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_set_params_1d_device_to_device_safe(UIntPtr node, SafeCudaMemoryHandle destination, SafeCudaMemoryHandle source, UIntPtr count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_set_params_1d_device_to_host_safe(UIntPtr node, SafeCudaPinnedMemoryHandle destination, SafeCudaMemoryHandle source, UIntPtr count);
